--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "uni-resolver-driver-did-example",
+  "name": "uni-resolver-driver-did-peopledata",
   "version": "1.0.0",
-  "description": "Example Universal Resolver Driver",
+  "description": "peopledata Universal Resolver Driver",
   "main": "index.js",
   "scripts": {
     "prestart": "npm install",
