--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "node index.js"
   },
   "keywords": [
-    "swagger"
+    "peopledata"
   ],
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "connect": "^3.2.0",
-    "js-yaml": "^3.3.0",
-    "oas3-tools": "^2.0.2"
+    "connect": "3.2.0",
+    "js-yaml": "3.3.0",
+    "oas3-tools": "2.0.2"
   }
 }
